fixed bottom border of last list item ignoring visibility

--- a/lesson_5/games_list/style.css
+++ b/lesson_5/games_list/style.css
@@ -40,7 +40,7 @@ h1 {
   padding: 10px 0 10px 15px;
 }
 
-#content li:last-child {
+#content li:not([style*="display: none"]):last-child {
   border-bottom: none;
 }
 
